--- a/Buddha/Base.lproj/Main_iPhone.storyboard
+++ b/Buddha/Base.lproj/Main_iPhone.storyboard
@@ -231,12 +231,12 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="YGG-2K-X3s" kind="relationship" relationship="rootViewController" id="aPz-GU-Mse"/>
+                        <segue destination="YGG-2K-X3s" kind="relationship" relationship="rootViewController" id="N9n-1x-dVk"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nwe-Fs-twG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="685" y="-3"/>
+            <point key="canvasLocation" x="685" y="-56"/>
         </scene>
         <!--Second View Controller - 佛经-->
         <scene sceneID="N0X-yZ-gdG">
@@ -317,7 +317,7 @@
         <!--Ebook Controller View - 佛经ebook-->
         <scene sceneID="95r-9s-Nwc">
             <objects>
-                <viewController title="佛经ebook" id="pCf-4g-E71" customClass="EbookControllerView" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EbookControllerView" title="佛经ebook" id="pCf-4g-E71" customClass="EbookControllerView" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="fdw-pC-xE9"/>
                         <viewControllerLayoutGuide type="bottom" id="xou-0A-5Hw"/>
@@ -333,6 +333,22 @@
             </objects>
             <point key="canvasLocation" x="1514" y="-3"/>
         </scene>
+        <!--Navigation Controller - Item-->
+        <scene sceneID="7hO-NU-GW3">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="fCT-BS-FqV" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="XHH-xE-rOX"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QPH-J3-cEL">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Idj-By-4w5" kind="relationship" relationship="rootViewController" id="xYd-4i-DC3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kER-1F-mIY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="678" y="617"/>
+        </scene>
         <!--Morning Night Work View Controller - 早晚课-->
         <scene sceneID="KuE-D9-Jbq">
             <objects>
@@ -345,21 +361,61 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" text="MorningNight View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="DgR-BY-PmM">
-                                <rect key="frame" x="9" y="82" width="302" height="42"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qho-0K-2m9">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="520"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <view alpha="0.40000000596046448" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bkU-uE-PAh" userLabel="View - 蒙板颜色">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Wrd-gp-eqW">
+                                <rect key="frame" x="0.0" y="20" width="320" height="498"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" restorationIdentifier="LessonListTableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="LessonListTableViewCell" id="DdE-oh-Sdh" customClass="PlayListTableViewCell">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DdE-oh-Sdh" id="GSt-aI-h5a">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eBv-Tt-GFO">
+                                                    <rect key="frame" x="20" y="11" width="227" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="songName" destination="eBv-Tt-GFO" id="4qO-YY-pdc"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Idj-By-4w5" id="GI5-qG-7M6"/>
+                                    <outlet property="delegate" destination="Idj-By-4w5" id="Ma8-YK-ytX"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="早晚课" image="first" id="egV-jM-Egr"/>
+                    <navigationItem key="navigationItem" id="5yT-Ry-YrY"/>
+                    <connections>
+                        <outlet property="backgroundImage" destination="Qho-0K-2m9" id="fGU-Ok-DQl"/>
+                        <outlet property="lessonTableView" destination="Wrd-gp-eqW" id="d1V-X8-e6Y"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KNt-Lf-8UR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="685" y="613"/>
+            <point key="canvasLocation" x="1049" y="607"/>
         </scene>
         <!--More View Controller - 更多 -->
         <scene sceneID="MO6-Lu-d7h">
@@ -402,8 +458,8 @@
                     <connections>
                         <segue destination="CZ4-MO-1fc" kind="relationship" relationship="viewControllers" id="dyB-s3-XYU"/>
                         <segue destination="28f-Hv-nTg" kind="relationship" relationship="viewControllers" id="kHj-Kd-K6Q"/>
-                        <segue destination="Idj-By-4w5" kind="relationship" relationship="viewControllers" id="cCq-UP-9cM"/>
-                        <segue destination="v6v-wz-LFF" kind="relationship" relationship="viewControllers" id="1fv-zy-25k"/>
+                        <segue destination="fCT-BS-FqV" kind="relationship" relationship="viewControllers" id="9JA-P0-n4J"/>
+                        <segue destination="v6v-wz-LFF" kind="relationship" relationship="viewControllers" id="gQD-bF-4nD"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FNP-y4-bzi" sceneMemberID="firstResponder"/>
