--- a/Buddha/Base.lproj/Main_iPhone.storyboard
+++ b/Buddha/Base.lproj/Main_iPhone.storyboard
@@ -417,6 +417,22 @@
             </objects>
             <point key="canvasLocation" x="1049" y="607"/>
         </scene>
+        <!--Navigation Controller - Item-->
+        <scene sceneID="NIV-P7-WQF">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="Pof-ql-7S9" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="qkt-Ok-jp2"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="z1w-mp-HFF">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="v6v-wz-LFF" kind="relationship" relationship="rootViewController" id="ciV-je-0dq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="49h-6n-Bf3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="678" y="1431"/>
+        </scene>
         <!--More View Controller - 更多 -->
         <scene sceneID="MO6-Lu-d7h">
             <objects>
@@ -468,13 +484,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="更多 " image="second" id="VZA-HN-1SJ"/>
+                    <navigationItem key="navigationItem" id="RI7-dV-gfA"/>
                     <connections>
                         <outlet property="settingTableView" destination="CaH-7p-GzY" id="8GA-ir-ay6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PZ3-9Y-76N" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="693" y="1431"/>
+            <point key="canvasLocation" x="1075" y="1424"/>
         </scene>
         <!--Web View Controller-->
         <scene sceneID="lcQ-bw-8nN">
@@ -492,7 +509,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9jS-dL-1uR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1098" y="1431"/>
+            <point key="canvasLocation" x="1437" y="1424"/>
         </scene>
         <!--Tab Bar Controller - 佛经navigation-->
         <scene sceneID="Vex-rW-GRa">
@@ -508,7 +525,7 @@
                         <segue destination="CZ4-MO-1fc" kind="relationship" relationship="viewControllers" id="dyB-s3-XYU"/>
                         <segue destination="28f-Hv-nTg" kind="relationship" relationship="viewControllers" id="kHj-Kd-K6Q"/>
                         <segue destination="fCT-BS-FqV" kind="relationship" relationship="viewControllers" id="9JA-P0-n4J"/>
-                        <segue destination="v6v-wz-LFF" kind="relationship" relationship="viewControllers" id="gQD-bF-4nD"/>
+                        <segue destination="Pof-ql-7S9" kind="relationship" relationship="viewControllers" id="IFj-fx-w7P"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FNP-y4-bzi" sceneMemberID="firstResponder"/>
